adding sythetic dataset to executue code

--- a/Exploration.ipynb
+++ b/Exploration.ipynb
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "comments = pd.read_csv(\"comments.csv\")\n",
+    "comments = pd.read_csv(\"data/synthetic_comments.csv\")\n",
     "comments['Dominance'] = comments['Dominance'].fillna(\"None\")\n",
     "comments = comments.loc[comments.text.notna()]\n",
     "comments.Dominance = comments.Dominance.astype('category')\n",
@@ -218,6 +218,7 @@
    ],
    "source": [
     "question_counts = comments.groupby(['var', 'City']).value_counts(['Dominance'], normalize=True).reset_index()\n",
+    "question_counts.columns = ['var', 'City', 'Dominance', 'text', 'proportion']\n",
     "question_counts_improve = question_counts.loc[question_counts['var'] == \"Is there anything that could be done to improve wellbeing in [your city]?\", :]\n",
     "heatmap_data_improve = question_counts_improve.pivot_table(index='City', columns='Dominance', values='proportion', aggfunc='sum')\n",
     "\n",
@@ -257,6 +258,7 @@
    ],
    "source": [
     "question_counts = comments.groupby(['var', 'City']).value_counts(['Dominance'], normalize=True).reset_index()\n",
+    "question_counts.columns = ['var', 'City', 'Dominance', 'text', 'proportion']\n",
     "question_counts_value = question_counts.loc[question_counts['var'] == \"What do you value most about living in [your city]?\", :]\n",
     "heatmap_data_value = question_counts_value.pivot_table(index='City', columns='Dominance', values='proportion', aggfunc='sum')\n",
     "\n",
@@ -296,6 +298,7 @@
    ],
    "source": [
     "question_counts = comments.groupby(['var', 'City']).value_counts(['Dominance'], normalize=True).reset_index()\n",
+    "question_counts.columns = ['var', 'City', 'Dominance', 'text', 'proportion']\n",
     "question_counts_about = question_counts.loc[question_counts['var'] == \"Is there anything else you’d like to tell us about wellbeing in [your city]?\", :]\n",
     "heatmap_data_about = question_counts_about.pivot_table(index='City', columns='Dominance', values='proportion', aggfunc='sum')\n",
     "\n",
@@ -413,10 +416,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train.to_csv(\"X_train.csv\", index=False)\n",
-    "X_test.to_csv(\"X_test.csv\", index=False)\n",
-    "y_train.to_csv(\"y_train.csv\", index=False)\n",
-    "y_test.to_csv(\"y_test.csv\", index=False)"
+    "X_train.to_csv(\"data/X_train.csv\", index=False)\n",
+    "X_test.to_csv(\"data/X_test.csv\", index=False)\n",
+    "y_train.to_csv(\"data/y_train.csv\", index=False)\n",
+    "y_test.to_csv(\"data/y_test.csv\", index=False)"
    ]
   }
  ],
