--- a/ml-models/naiveBayes.ipynb
+++ b/ml-models/naiveBayes.ipynb
@@ -37,10 +37,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = pd.read_csv(\"./data/X_train.csv\")\n",
-    "X_test = pd.read_csv(\"./data/X_test.csv\")\n",
-    "y_train = pd.read_csv(\"./data/y_train.csv\")\n",
-    "y_test = pd.read_csv(\"./data/y_test.csv\")\n",
+    "X_train = pd.read_csv(\"../data/X_train.csv\")\n",
+    "X_test = pd.read_csv(\"../data/X_test.csv\")\n",
+    "y_train = pd.read_csv(\"../data/y_train.csv\")\n",
+    "y_test = pd.read_csv(\"../data/y_test.csv\")\n",
     "\n",
     "X_train = X_train.text \n",
     "X_test = X_test.text\n",
